--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -468,7 +468,7 @@ The ObsLocTAP specification \citep{2021ivoa.spec.0724S} defines the term
 these modes. We include the same term here in the extension. The two 
 possible values for radio astronomy data are the following:
 \begin{itemize}
-	\item Sidereal : observations pointed on a fixed targeti, as defined in 
+	\item Sidereal : observations pointed on a fixed target, as defined in 
 		ObsLocTAP
 	\item Fixed-az-el-transit : observations fixed on a given elevation 
 		and azimuth, as in ObsLocTAP
